可运行版本1.0

--- a/config.ini
+++ b/config.ini
@@ -2,7 +2,7 @@
 #通过匹配图像识别坐标
 IsMatchImageByLoc = true
 #识别图像时是否保存坐标数据
-IsRecordLoc = true
+IsRecordLoc = false
 #防守队伍数量
 TeamNum = 3
 #操作延时(建议不要随意更改)
