修改代码结构2

--- a/sources/locmapping_2.json
+++ b/sources/locmapping_2.json
@@ -16,7 +16,8 @@
 
     "4":[
         "team-config-next-1",
-        "team-config-next-2"
+        "team-config-next-2",
+        "bianzuwancheng"
     ],
 
     "5":[
