改进部分逻辑，修改了交互

--- a/config.ini
+++ b/config.ini
@@ -1,24 +1,44 @@
 [progress]
 #通过匹配图像识别坐标
 IsMatchImageByLoc = true
+
 #识别图像时是否保存坐标数据
 IsRecordLoc = false
+
 #防守队伍数量
 TeamNum = 3
-#操作延时(建议不要随意更改)
-DelayList = 0.3, 0.5, 0.75, 1, 1.5, 2
+
+#随机操作延时(建议不要随意更改)
+DelayList = 0.3, 0.6, 0.75, 1, 1.5, 2
+
+#换防间隔时长
+#(默认内置2秒间隔，即实际等待时长总共为changetime+2)
+ChangeTime = 8
+
+#是否随机间隔时长
+#如果为true则在0~changetime中随机选择时长+默认间隔2秒
+#如果为false则实际等待时长总共为changetime+2)
+IsRandomChangeTime = true
+
+
+#################################################
 [cal]
 #识别图像坐标后需要减去的像素数
 #以保证不会点击到无效区域
 #相当于缩小了识别框
 BorderPixel = 5
-#操作延时(建议不要随意更改)
+
+#随机操作延时(建议不要随意更改)
 Delay = 0.3
+
 #截屏后保存的图像的名字
 DefaultName = screencap
+
+###############################################
 [connect]
 #adb应用的名字
 AdbServer = adb_server
+
 #模拟器品牌,根据实际情况选填括号中内容
 #例如使用夜神模拟器，则SimuName = yeshen
 #逍遥游(xiaoyao)
@@ -28,9 +48,8 @@ AdbServer = adb_server
 #BlueStacks(bluestacks)
 #雷电安卓模拟器(leidian)
 SimuName = mumu
-[jsonos]
-#json文件路径
-LocationJsonPath = location.json
+
+##################################################
 [test]
 #模拟器分辨率
 SimuResolution = 1280,720
