--- a/config.ini
+++ b/config.ini
@@ -8,6 +8,9 @@ IsRecordLoc = false
 #防守队伍数量
 TeamNum = 3
 
+#编队序号
+TeamListId = 4
+
 #随机操作延时(建议不要随意更改)
 DelayList = 0.3, 0.6, 0.75, 1, 1.5, 2
 
@@ -19,6 +22,11 @@ ChangeTime = 8
 #如果为true则在0~changetime中随机选择时长+默认间隔2秒
 #如果为false则实际等待时长总共为changetime+2)
 IsRandomChangeTime = true
+
+#是否允许换队与上次重复 true为允许
+#注：若只选择一组编队，则必定会重复
+#此时此参数无意义
+IsRepeatTeam = false
 
 
 #################################################
