增加定时关闭功能

--- a/config.ini
+++ b/config.ini
@@ -9,7 +9,7 @@ IsRecordLoc = false
 TeamNum = 3
 
 #编队序号
-TeamListId = 4
+TeamListId = 3,4,5
 
 #随机操作延时(建议不要随意更改)
 DelayList = 0.3, 0.6, 0.75, 1, 1.5, 2
@@ -27,6 +27,11 @@ IsRandomChangeTime = true
 #注：若只选择一组编队，则必定会重复
 #此时此参数无意义
 IsRepeatTeam = false
+
+#自动换防时长，到时后自动关闭脚本
+#若在换队过程中途计时结束，程序会保证换完当前队伍后再关闭
+#单位:分钟(设置为0或-1表示无限换防，手动结束)
+ShutDownTime = 30
 
 
 #################################################
